feat: add `/logger` test endpoint to check errors (500 status code) are being logged into `error.log` instead of `application.log`
